<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_settings_value" >
        <ListPreference
            android:defaultValue="five_min"
            android:dialogTitle="@string/dialog_title_list_preference"
            android:entries="@array/entries_interval_preference"
            android:entryValues="@array/entryvalues_interval_preference"
            android:key="list_preference"
            android:summary="@string/summary_list_preference"
            android:title="@string/title_list_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_information" >
        <Preference
            android:key="version"
            android:title="@string/version" >
            <intent 
                android:action=".activities.HistoryViewActivity" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>